--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -42,7 +42,7 @@
   }
 }
 
-.block-text {
+.block-hero-text {
   font-size: xx-large;
   margin-right: 0.5em;
   border-right: solid 1px #ccc;
@@ -54,9 +54,13 @@
 }
 
 @media (max-width: 411px) {
-  .block-text {
+  .block-hero-text {
     /* portrait */
     padding-right: 0.5em;
   }
+}
+
+.block-text {
+  padding: 1.5em;
 }
 /*# sourceMappingURL=about.css.map */
