work in progress- about page

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -17,7 +17,7 @@
   font-weight: bolder;
   font-size: larger;
   font-family: revert;
-  width: 100vw;
+  width: 100%;
   padding: 1.5em;
   background-color: #f4f0ec;
   color: grey;
